# Zettelkasting-Tools

./: .gitignore  LICENSE  README.md  pyproject.toml  table.txt
Charts/: quadrant.md  zk-simple.md
Functions/: archive_lookback.py  beautiful_language.py  lookback.py  modified.py  random_slogan.py  test.lookback.py
MindMaps/: 2024 Gaps.smmx  Comprehension Monitoring.smmx
Printing/: all_links.py  combined.md
Prompts/: writing_prompt_search.py
Statistics/: cumlative_totals.py  cumulative_totals.csv  current_year.py  main.py  mentions.sh  the_fucntions.py
tests/: bl_unit_test.py
