[tool.poetry]
name = "zettelkasting tools"
version = "0.1.0"
description = ""
authors = ["Will Simpson <will@kestrelcreek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
